# Label-Semantic-Aware-Pretraining

./: README.md  pyproject.toml  requirements.txt
analysis/: wrong_examples.csv
analysis/ATIS/: acc.csv  bleu_score.csv  cosine_similarity.csv  first_word_acc.csv  jaccard_score.csv
analysis/ATIS/model_1/: eight_shot_metrics.txt  eight_shot_predicted_labels.txt  four_shot_metrics.txt  (+10 more)
analysis/SNIPS/: acc.csv  bleu_score.csv  cosine_similarity.csv  first_word_acc.csv  jaccard_score.csv
analysis/TOPS_Reminder/: acc.csv  bleu_score.csv  cosine_similarity.csv  first_word_acc.csv  jaccard_score.csv
analysis/TOPS_Weather/: acc.csv  bleu_score.csv  cosine_similarity.csv  first_word_acc.csv  jaccard_score.csv
data/evaluation/: create_dataset.ipynb  preprocess_data.sh  preprocessing.ipynb  preprocessing.py
data/pretraining/: create_dataset.ipynb  create_dataset.py  create_pretrain.sh  noise.ipynb  preprocess_data.sh  preprocessing.ipynb  preprocessing.py  random_noise.ipynb  random_noise.json
models/: N_Shot_Learning_SNIPS.ipynb  N_Shot_Lerning.ipynb  create_metrics.py  fine_tune.py  get_wrong_examples.ipynb  preTraining.ipynb  pretraining copy.ipynb  pretraining.ipynb
models/inference/: N_Shot_Lerning.ipynb
nlp_project/: __init__.py  preprocessing.ipynb
nlp_project/analysis/: pred_graph.ipynb
nlp_project/eval/: ATIS.json  ATIS_pred.json  eval.ipynb  eval.py
nlp_project/preprocessed_data/: polyai-bank_label_denoising.json
scripts/: do_pretrain.sh  fine_tune.sh  fine_tuning.sh  generate_data.sh  preTrain.sh
tests/: __init__.py
utils/: util.py
(+449 files in other folders)
