[tool.poetry]
name = "nlp-project"
version = "0.1.0"
description = ""
authors = ["Peter <digitalizedveer@gmail.com>"]
readme = "README.md"
packages = [{include = "nlp_project"}]

[tool.poetry.dependencies]
python = "^3.10"
transformers = "^4.28.1"
datasets = "^2.12.0"
numpy = "^1.24.3"
pandas = "^2.0.1"
ipykernel = "^6.22.0"
torch = "^2.0.0"
matplotlib = "^3.7.1"
gdown = "^4.7.1"
plotly = "^5.14.1"
sentencepiece = "^0.1.99"
nltk = "^3.8.1"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
